--- a/journey.html
+++ b/journey.html
@@ -101,7 +101,7 @@
                     <p>Always grateful to that day of janmashtami.🧿</p>
                     <div class="media">
                         <!-- Replace with your own photo in assets folder. -->
-                        <img src="assets/con.jpeg" alt="Forever" class="thumb" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <img src="assets/c.jpeg" alt="Forever" class="thumb" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                         <div class="thumb placeholder" style="display:none;">
                             <span class="ph-ico">📷</span>
                             <span class="ph-text">Add photo</span>
