--- a/page3.html
+++ b/page3.html
@@ -100,7 +100,7 @@
           <video class="reel-video" src="assets/reels/reel1.mp4" playsinline preload="metadata" controls></video>
           <div class="reel-caption-overlay">
             <div class="reel-caption">
-              <strong>hezzlove</strong>
+              <strong>Naimish</strong>
               <p>POV: I found my favorite person 🫶</p>
             </div>
           </div>
@@ -111,7 +111,7 @@
           <video class="reel-video" src="assets/reels/reel2.mp4" playsinline preload="metadata" controls></video>
           <div class="reel-caption-overlay">
             <div class="reel-caption">
-              <strong>hezzlove</strong>
+              <strong>Naimish</strong>
               <p>Still not over this moment… and I don’t think I ever will ✨</p>
             </div>
           </div>
@@ -122,7 +122,7 @@
           <video class="reel-video" src="assets/reels/reel3.mp4" playsinline preload="metadata" controls></video>
           <div class="reel-caption-overlay">
             <div class="reel-caption">
-              <strong>hezzlove</strong>
+              <strong>Naimish</strong>
               <p>Main character energy but she’s the whole story 💕</p>
             </div>
           </div>
@@ -133,7 +133,7 @@
           <video class="reel-video" src="assets/reels/reel4.mp4" playsinline preload="metadata" controls></video>
           <div class="reel-caption-overlay">
             <div class="reel-caption">
-              <strong></strong>
+              <strong>Naimish</strong>
               <p>Some smiles just feel like home 🏡💖</p>
             </div>
           </div>
@@ -144,7 +144,7 @@
           <video class="reel-video" src="assets/reels/reel5.mp4" playsinline preload="metadata" controls></video>
           <div class="reel-caption-overlay">
             <div class="reel-caption">
-              <strong>hezzlove</strong>
+              <strong>Naimish</strong>
               <p>She’s not the vibe… she’s the whole atmosphere 💫</p>
             </div>
           </div>
@@ -155,7 +155,7 @@
           <video class="reel-video" src="assets/reels/reel6.mp4" playsinline preload="metadata" controls></video>
           <div class="reel-caption-overlay">
             <div class="reel-caption">
-              <strong>hezzlove</strong>
+              <strong>Naimish</strong>
               <p>Plot twist: she’s the best thing that ever happened to me 💫</p>
             </div>
           </div>
@@ -166,7 +166,7 @@
           <video class="reel-video" src="assets/reels/reel7.mp4" playsinline preload="metadata" controls></video>
           <div class="reel-caption-overlay">
             <div class="reel-caption">
-              <strong>hezzlove</strong>
+              <strong>Naimish</strong>
               <p>Every reel, same feeling 🥹💗</p>
             </div>
           </div>
@@ -177,7 +177,7 @@
           <video class="reel-video" src="assets/reels/reel8.mp4" playsinline preload="metadata" controls></video>
           <div class="reel-caption-overlay">
             <div class="reel-caption">
-              <strong>hezzlove</strong>
+              <strong>Naimish</strong>
               <p>I don’t need perfect… I just need you 💞</p>
             </div>
           </div>
@@ -188,7 +188,7 @@
           <video class="reel-video" src="assets/reels/reel9.mp4" playsinline preload="metadata" controls></video>
           <div class="reel-caption-overlay">
             <div class="reel-caption">
-              <strong>hezzlove</strong>
+              <strong>Naimish</strong>
               <p>POV: You’re falling harder every day 😳</p>
             </div>
           </div>
@@ -199,7 +199,7 @@
           <video class="reel-video" src="assets/reels/reel10.mp4" playsinline preload="metadata" controls></video>
           <div class="reel-caption-overlay">
             <div class="reel-caption">
-              <strong>hezzlove</strong>
+              <strong>Naimish</strong>
               <p>She doesn’t even know how special she is ✨</p>
             </div>
           </div>
@@ -210,7 +210,7 @@
           <video class="reel-video" src="assets/reels/reel11.mp4" playsinline preload="metadata" controls></video>
           <div class="reel-caption-overlay">
             <div class="reel-caption">
-              <strong>hezzlove</strong>
+              <strong>Naimish</strong>
               <p>And somehow… I still like her more than yesterday 💖</p>
             </div>
           </div>
@@ -221,7 +221,7 @@
           <video class="reel-video" src="assets/reels/reel12.mp4" playsinline preload="metadata" controls></video>
           <div class="reel-caption-overlay">
             <div class="reel-caption">
-              <strong>hezzlove</strong>
+              <strong>Naimish</strong>
               <p>Officially obsessed. No shame. 💕</p>
             </div>
           </div>
